--- a/index.html
+++ b/index.html
@@ -1130,7 +1130,7 @@
     <div class="last-footer">
       <div class="container">
         <div class="copyright">
-          <div class="client-rights">مؤسسة قافلة نجران التجارية 2020 ©</div>
+          <div class="client-rights">© مؤسسة قافلة نجران التجارية 2020</div>
           <div class="tasawk">تصميم وتطوير<a href="https://tasawk.com.sa" class="fixall"><img
                 src="images/tasawk.png"></a></div>
         </div>
