--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/bootstrap-rtl.min.css" />
   <link rel="stylesheet" href="css/swiper.min.css" />
   <link rel="stylesheet" href="css/fontawesome.min.css" />
+  <link rel="stylesheet" href="css/animate.css" />
   <link rel="stylesheet" href="css/main.css" />
 </head>
 
@@ -351,7 +352,7 @@
       <div class="main-div">
         <div class="row">
           <div class="col-lg-6">
-            <div class="main-slider-sec">
+            <div class="main-slider-sec wow zoomIn">
               <div class="main-slider">
                 <div class="swiper-container">
                   <div class="swiper-wrapper">
@@ -377,11 +378,14 @@
           <div class="col-lg-6 col-xs-12">
             <div class="banners-grid">
               <div class="banner-cont">
-                <a href="#!" class="banner"><img src="images/banner1.jpg" class="img-responsive"></a>
+                <a href="#!" class="banner wow zoomIn" data-wow-delay="0.2s"><img src="images/banner1.jpg"
+                    class="img-responsive"></a>
               </div>
               <div class="banners-col">
-                <a href="#!" class="banner"><img src="images/banner2.jpg" class="img-responsive"></a>
-                <a href="#!" class="banner"><img src="images/banner3.jpg" class="img-responsive"></a>
+                <a href="#!" class="banner wow fadeInDown" data-wow-delay="0.4s"><img src="images/banner2.jpg"
+                    class="img-responsive"></a>
+                <a href="#!" class="banner wow fadeInUp" data-wow-delay="0.4s"><img src="images/banner3.jpg"
+                    class="img-responsive"></a>
               </div>
             </div>
           </div>
@@ -394,14 +398,14 @@
   <!-- Start products -->
   <section class="products-slider-sec">
     <div class="container">
-      <h2 class="sec-title fixall">الأكثر مبيعًا</h2>
+      <h2 class="sec-title fixall wow fadeInUp">الأكثر مبيعًا</h2>
     </div>
     <div class="container">
       <div class=" products-slider bestSeller">
         <div class="swiper-container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro1.jpg" class="img-responsive">
@@ -431,7 +435,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp" data-wow-delay="0.15s">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro2.jpg" class="img-responsive">
@@ -457,7 +461,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp" data-wow-delay="0.3s">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro3.jpg" class="img-responsive">
@@ -487,7 +491,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp" data-wow-delay="0.45s">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro4.jpg" class="img-responsive">
@@ -517,7 +521,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp" data-wow-delay="0.6s">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro5.jpg" class="img-responsive">
@@ -547,7 +551,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp" data-wow-delay="0.75s">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro6.jpg" class="img-responsive">
@@ -587,7 +591,7 @@
   <!-- End products -->
 
   <!-- Start Banner -->
-  <div class="SingleBanner-cont">
+  <div class="SingleBanner-cont wow zoomIn">
     <div class="container"><a href="#!" class="banner"><img src="images/banner4.jpg" class="img-responsive"></a></div>
   </div>
   <!-- End Banner -->
@@ -595,14 +599,14 @@
   <!-- Start products -->
   <section class="products-slider-sec">
     <div class="container">
-      <h2 class="sec-title fixall">العروض المميزة</h2>
+      <h2 class="sec-title fixall wow fadeInUp">العروض المميزة</h2>
     </div>
     <div class="container">
       <div class=" products-slider offers">
         <div class="swiper-container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro6.jpg" class="img-responsive">
@@ -632,7 +636,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp" data-wow-delay="0.15s">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro5.jpg" class="img-responsive">
@@ -662,7 +666,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp" data-wow-delay="0.3s">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro4.jpg" class="img-responsive">
@@ -692,7 +696,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp" data-wow-delay="0.45s">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro3.jpg" class="img-responsive">
@@ -722,7 +726,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp" data-wow-delay="0.6s">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro2.jpg" class="img-responsive">
@@ -752,7 +756,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp" data-wow-delay="0.75s">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro1.jpg" class="img-responsive">
@@ -795,8 +799,9 @@
   <div class="doubleBanner-cont">
     <div class="container">
       <div class="double-banner">
-        <a href="#!" class="banner"><img src="images/banner5.jpg" class="img-responsive"></a>
-        <a href="#!" class="banner"><img src="images/banner6.jpg" class="img-responsive"></a>
+        <a href="#!" class="banner wow zoomIn"><img src="images/banner5.jpg" class="img-responsive"></a>
+        <a href="#!" class="banner wow zoomIn" data-wow-delay="0.2s"><img src="images/banner6.jpg"
+            class="img-responsive"></a>
       </div>
     </div>
   </div>
@@ -805,14 +810,14 @@
   <!-- Start products -->
   <section class="products-slider-sec">
     <div class="container">
-      <h2 class="sec-title fixall">وصل حديثًا</h2>
+      <h2 class="sec-title fixall wow fadeInUp">وصل حديثًا</h2>
     </div>
     <div class="container">
       <div class=" products-slider new">
         <div class="swiper-container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro3.jpg" class="img-responsive">
@@ -842,7 +847,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp" data-wow-delay="0.15s">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro1.jpg" class="img-responsive">
@@ -872,7 +877,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp" data-wow-delay="0.3s">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro5.jpg" class="img-responsive">
@@ -902,7 +907,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp" data-wow-delay="0.45s">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro2.jpg" class="img-responsive">
@@ -932,7 +937,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp" data-wow-delay="0.6s">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro6.jpg" class="img-responsive">
@@ -962,7 +967,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="product">
+              <div class="product wow fadeInUp" data-wow-delay="0.75s">
                 <div class="img-here">
                   <a href="#!" class="pro-img fixall">
                     <img src="images/pro4.jpg" class="img-responsive">
@@ -1007,7 +1012,7 @@
       <div class="feats">
         <div class="row">
           <div class="col-md-3">
-            <div class="feat">
+            <div class="feat wow fadeInUp">
               <div class="feat-img"><img src="images/feat1.png" class="img-responsive"></div>
               <div class="feat-info">
                 <h5 class="feat-title fixall">توصيل مجاني</h5>
@@ -1018,7 +1023,7 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="feat">
+            <div class="feat wow fadeInUp" data-wow-delay="0.15s">
               <div class="feat-img"><img src="images/feat2.png" class="img-responsive"></div>
               <div class="feat-info">
                 <h5 class="feat-title fixall">شحن شامل</h5>
@@ -1029,7 +1034,7 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="feat">
+            <div class="feat wow fadeInUp" data-wow-delay="0.3s">
               <div class="feat-img"><img src="images/feat3.png" class="img-responsive"></div>
               <div class="feat-info">
                 <h5 class="feat-title fixall">وسائل الدفع</h5>
@@ -1040,7 +1045,7 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="feat">
+            <div class="feat wow fadeInUp" data-wow-delay="0.45s">
               <div class="feat-img"><img src="images/feat4.png" class="img-responsive"></div>
               <div class="feat-info">
                 <h5 class="feat-title fixall">خدمة عملاء</h5>
@@ -1063,7 +1068,7 @@
       <div class="footer">
         <div class="row">
           <div class="col-md-2 col-sm-3 col-xs-12">
-            <div class="nav-foot-cont">
+            <div class="nav-foot-cont wow fadeInUp">
               <h3 class="fixall nav-foot-header foot-header">معلومات</h3>
               <ul class="nav-foot fixall list-unstyled">
                 <li class="nav-foot-li fixall"><a href="#!" class="nav-foot-link fixall">من نحن</a></li>
@@ -1075,7 +1080,7 @@
             </div>
           </div>
           <div class="col-md-2 col-sm-3 col-xs-12">
-            <div class="nav-foot-cont">
+            <div class="nav-foot-cont wow fadeInUp" data-wow-delay="0.15s">
               <h3 class="fixall nav-foot-header foot-header">اضافات</h3>
               <ul class="nav-foot fixall list-unstyled">
                 <li class="nav-foot-li fixall"><a href="#!" class="nav-foot-link fixall">الشركات</a></li>
@@ -1086,7 +1091,7 @@
             </div>
           </div>
           <div class="col-md-2 col-sm-3 col-xs-12">
-            <div class="nav-foot-cont">
+            <div class="nav-foot-cont wow fadeInUp" data-wow-delay="0.3s">
               <h3 class="fixall nav-foot-header foot-header">خدمة العملاء</h3>
               <ul class="nav-foot fixall list-unstyled">
                 <li class="nav-foot-li fixall"><a href="#!" class="nav-foot-link fixall">اتصل بنا</a></li>
@@ -1096,7 +1101,7 @@
             </div>
           </div>
           <div class="col-md-2 col-sm-3 col-xs-12">
-            <div class="nav-foot-cont">
+            <div class="nav-foot-cont wow fadeInUp" data-wow-delay="0.45s">
               <h3 class="fixall nav-foot-header foot-header">حسابي</h3>
               <ul class="nav-foot fixall list-unstyled">
                 <li class="nav-foot-li fixall"><a href="#!" class="nav-foot-link fixall">حسابى</a></li>
@@ -1106,8 +1111,8 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-4 col-xs-12">
-            <div class="news-letter">
+          <div class="col-md-4 col-xs-12 wow fadeInUp" data-wow-delay="0.6s">
+            <div class="news-letter ">
               <h3 class="fixall news-header foot-header">النشرة البريدية</h3>
               <p class="fixall news-subhead">اشترك ليصلك جديد عروضنا ومنتجاتنا</p>
               <div class="newsletter-cont">
@@ -1141,6 +1146,7 @@
   <script src="js/jquery-2.2.1.min.js"> </script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/swiper.min.js"></script>
+  <script src="js/wow.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
