--- a/index.html
+++ b/index.html
@@ -1143,6 +1143,10 @@
     </div>
   </footer>
   <!-- end footer -->
+
+  <div class="arr-top">
+    <span class="fas fa-long-arrow-alt-up"></span>
+  </div>
   <script src="js/jquery-2.2.1.min.js"> </script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/swiper.min.js"></script>
